<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_right"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/text_margin"/>



<LinearLayout
    android:id="@+id/ll_transaction_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_alignParentLeft="true"
    android:layout_toLeftOf="@id/iv_arrow">

    <LinearLayout
        android:id="@+id/ll_id_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextviewNormalBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_id" />

        <TextView
            android:id="@+id/tv_terminal_id"
            style="@style/TextviewNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="NV000A03" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextviewNormalBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_date_time" />

        <TextView
            android:id="@+id/tv_transaction_datetime"
            style="@style/TextviewNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="02/13/2017 05:00:59 PM PST" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextviewNormalBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_total_amount" />

        <TextView
            android:id="@+id/tv_transaction_amount"
            style="@style/TextviewNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="$100.00" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextviewNormalBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_xctn_type" />

        <TextView
            android:id="@+id/tv_transaction_type"
            style="@style/TextviewNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="Withdrawal Checking" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextviewNormalBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_xctn_status" />

        <TextView
            android:id="@+id/tv_transaction_status"
            style="@style/TextviewNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="Completed" />

    </LinearLayout>



</LinearLayout>

    <View style="@style/Separator"
        android:layout_below="@id/ll_transaction_row"/>


</RelativeLayout>
