<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_right"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/view_margin"/>



<LinearLayout
    android:id="@+id/ll_transaction_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_alignParentLeft="true"
    android:layout_toLeftOf="@id/iv_arrow">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextviewNormalBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_merchant" />

        <TextView
            android:id="@+id/tv_terminal_merchant"
            style="@style/TextviewNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="HQ Merchant" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_id_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextviewNormalBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_terminal_" />

        <TextView
            android:id="@+id/tv_terminal_id"
            style="@style/TextviewNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="50012350" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextviewNormalBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_datetime" />

        <TextView
            android:id="@+id/tv_terminal_date"
            style="@style/TextviewNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="10/17/2017 4:11 PM" />

    </LinearLayout>


</LinearLayout>

    <View style="@style/Separator"
        android:layout_below="@id/ll_transaction_row"/>


</RelativeLayout>
